<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck3"
    tools:context=".Login">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:hint="@string/username"
        android:background="#30ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password1"
        android:layout_below="@id/username"
        android:hint="@string/password"
        android:background="#30ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_ac_unit_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="58dp"
        android:background="#50ffffff"
        android:padding="20dp"
        android:text="@string/loginBtn"
        android:textColor="@color/white" />


</RelativeLayout>