<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif-black"
        android:text="@string/new_search"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametv" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif-black"
        android:text="@string/my_favorites"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif-black"
        android:text="@string/about"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="139dp"
        android:layout_height="132dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="Hi!"
        android:textSize="96sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nametv"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:text="Erick"
        android:textStyle="bold"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>